--- a/plugin.yml
+++ b/plugin.yml
@@ -1,29 +1,9 @@
-name: RPGGameUI
-main: RPGGameUI\Main
-api:
-- 3.0.0
-- 3.0.1
-- 3.0.0-ALPHA1
-- 3.0.0-ALPHA2
-- 3.0.0-ALPHA3
-- 3.0.0-ALPHA4
-- 3.0.0-ALPHA5
-- 3.0.0-ALPHA6
-- 3.0.0-ALPHA7
-- 3.0.0-ALPHA8
-- 3.0.0-ALPHA9
-- 3.0.0-ALPHA10
-- 3.0.0-ALPHA11
-- 3.0.0-ALPHA12
-- 3.0.0-ALPHA13
-- 3.0.0-ALPHA14
-- 3.0.0-ALPHA15
-- 3.1.0
-- 4.0.0
-
-version: 1.0.0
-author: BuildLike
+name:           RPGGameUI
+main:           RPGGameUI\Main
+api:            [3.0.0, 3.0.1, 3.0.0-ALPHA10, 3.0.0-ALPHA11, 3.0.0-ALPHA12, 3.0.0-ALPHA13, 3.0.0-ALPHA14, 3.0.0-ALPHA15]
+version:        1.0.0
+author:         BuildLike
 
 commands:
  rpgui:
-  description: "RPGGame"
+  description:  "RPGGame"
