--- a/plugin.yml
+++ b/plugin.yml
@@ -1,10 +1,9 @@
 name:           RPGGameUI
 main:           RPGGameUI\Main
 api:            [3.0.0, 3.0.1, 3.0.0-ALPHA10, 3.0.0-ALPHA11, 3.0.0-ALPHA12, 3.0.0-ALPHA13, 3.0.0-ALPHA14, 3.0.0-ALPHA15]
-version:        OPStartVer
+version:        Beta2
 author:         BuildLike
 
 commands:
  rpgui:
   description:  "RPGGame"
-  default: OP
